front end and backend communication established: List of shops ( names, and images) now visible in the front page

--- a/shopsfrontend/src/app/app.component.html
+++ b/shopsfrontend/src/app/app.component.html
@@ -21,96 +21,7 @@
 </nav>
 
 
-
-<!--- Cards -->
-<br/>
-<div class= "container">
-  <div class="row padding">
-    <div class="col-md-4 d-flex align-items-stretch">
-      <div class="card">
-        <h4> shop name 1 </h4>
-          <img class ="card-img-top" src="assets/img/patients.jpg" height="300"/>
-          <div class="card-body">
-            <div style="text-align: center">
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:red; width: 45%"> dislike</a>
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:green; width: 45%"> like</a>
-            </div>
-          </div>
-      </div>
-    </div>
-
-    <div class="col-md-4 d-flex align-items-stretch">
-      <div class="card">
-        <h4> shop name 2 </h4>
-          <img class ="card-img-top" src="assets/img/patients.jpg" height="300"/>
-          <div class="card-body">
-            <div style="text-align: center">
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:red; width: 45%"> dislike</a>
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:green; width: 45%"> like</a>
-            </div>
-          </div>
-      </div>
-    </div>
-
-    <div class="col-md-4 d-flex align-items-stretch">
-      <div class="card">
-        <h4> shop name 3 </h4>
-          <img class ="card-img-top" src="assets/img/patients.jpg" height="300"/>
-          <div class="card-body">
-            <div style="text-align: center">
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:red; width: 45%"> dislike</a>
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:green; width: 45%"> like</a>
-            </div>
-          </div>
-      </div>
-    </div>
-  </div>
-  <br/>
-  <div class="row padding">
-    <div class="col-md-4 d-flex align-items-stretch">
-      <div class="card">
-        <h4> shop name 1 </h4>
-          <img class ="card-img-top" src="assets/img/patients.jpg" height="300"/>
-          <div class="card-body">
-            <div style="text-align: center">
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:red; width: 45%"> dislike</a>
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:green; width: 45%"> like</a>
-            </div>
-          </div>
-      </div>
-    </div>
-
-    <div class="col-md-4 d-flex align-items-stretch">
-      <div class="card">
-        <h4> shop name 2 </h4>
-          <img class ="card-img-top" src="assets/img/patients.jpg" height="300"/>
-          <div class="card-body">
-            <div style="text-align: center">
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:red; width: 45%"> dislike</a>
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:green; width: 45%"> like</a>
-            </div>
-          </div>
-      </div>
-    </div>
-
-    <div class="col-md-4 d-flex align-items-stretch">
-      <div class="card">
-        <h4> shop name 3 </h4>
-          <img class ="card-img-top" src="assets/img/patients.jpg" height="300"/>
-          <div class="card-body">
-            <div style="text-align: center">
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:red; width: 45%"> dislike</a>
-              <a href="patients.html" class="btn btn-outline-secondary" style="background-color:green; width: 45%"> like</a>
-            </div>
-          </div>
-      </div>
-    </div>
-  </div>
-</div>
-<br/><br/>
-
-
-
+<router-outlet ></router-outlet>
 
 
 
