implemented basic authentification with spring security login and signup working with email and password shops are now a protected ressource

--- a/shopsfrontend/src/app/app.component.html
+++ b/shopsfrontend/src/app/app.component.html
@@ -10,10 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarResp">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Nearby shops</a>
+          <a class="nav-link" routerLink="/shops">Nearby shops</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link" href="pictures.html">Preffered shops</a>
+          <a class="nav-link">Preffered shops</a>
         <li>
       </ul>
     </div>
