--- a/shopsfrontend/src/app/shops/shops.component.html
+++ b/shopsfrontend/src/app/shops/shops.component.html
@@ -13,8 +13,8 @@
         <img class ="card-img-top" src={{s.picture}} height="300"/>
         <div class="card-body">
           <div style="text-align: center">
-            <a href="patients.html" class="btn btn-outline-danger m-1" style="width: 40%"> dislike</a>
-            <a href="patients.html" class="btn btn-outline-success m-1" style="width: 40%"> like</a>
+            <a  class="btn btn-outline-danger m-1" style="width: 40%" > dislike</a>
+            <a  class="btn btn-outline-success m-1" style="width: 40%" (click)="addLikedShop(s)"> like</a>
           </div>
         </div>
       </div>
