The user can now check the list of liked shops: liked shops component added to front end and a new entry point was added to rest controller to get the liked shops.

--- a/shopsfrontend/src/app/liked-shops/liked-shops.component.html
+++ b/shopsfrontend/src/app/liked-shops/liked-shops.component.html
@@ -12,8 +12,7 @@
         <img class ="card-img-top" src={{s.picture}} height="300"/>
         <div class="card-body">
           <div style="text-align: center">
-            <a  class="btn btn-outline-danger m-1" style="width: 40%" > dislike</a>
-            <a  class="btn btn-outline-success m-1" style="width: 40%" (click)="addLikedShop(s)"> like</a>
+            <button  class="btn btn-outline-danger m-1" style="width: 60%" >remove </button>
           </div>
         </div>
       </div>
