--- a/shopsfrontend/src/app/app.component.html
+++ b/shopsfrontend/src/app/app.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" routerLink="/shops">Nearby shops</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link">Preffered shops</a>
+          <a class="nav-link" routerLink="/likedShops">Preffered shops</a>
         <li>
       </ul>
     </div>
