remove liked shops functionality implemented: through sending a delete http request to the backend and updating the like shops list of the user

--- a/shopsfrontend/src/app/liked-shops/liked-shops.component.html
+++ b/shopsfrontend/src/app/liked-shops/liked-shops.component.html
@@ -12,7 +12,7 @@
         <img class ="card-img-top" src={{s.picture}} height="300"/>
         <div class="card-body">
           <div style="text-align: center">
-            <button  class="btn btn-outline-danger m-1" style="width: 60%" >remove </button>
+            <button  class="btn btn-outline-danger m-1" style="width: 60%" (click)="removeLikedShop(s)" >remove </button>
           </div>
         </div>
       </div>
