--- a/shopsfrontend/src/app/login/login.component.html
+++ b/shopsfrontend/src/app/login/login.component.html
@@ -13,7 +13,7 @@
              ngModel name="password" required>
     </div>
     <input [disabled]="!f.valid " type="submit" class="btn btn-success ml-2 float-right" value="sign in"/>
-    <input [disabled]="!f.valid"  class="btn btn-primary float-right" value="sign in" />
+    <button class="btn btn-primary float-right" routerLink="/register">sign up</button>
   </form>
 
 </section>
