--- a/shopsfrontend/src/app/login/login.component.html
+++ b/shopsfrontend/src/app/login/login.component.html
@@ -3,7 +3,8 @@
 
     <div class="form-group" >
       <label for="email" >Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="valid@mail.com"
+      <input type="email" class="form-control" id="email"
+             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
              ngModel name="email" required>
     </div>
 
@@ -13,7 +14,7 @@
              ngModel name="password" required>
     </div>
     <input [disabled]="!f.valid " type="submit" class="btn btn-success ml-2 float-right" value="sign in"/>
-    <button class="btn btn-primary float-right" routerLink="/register">sign up</button>
+    <button class="btn btn-primary float-right" (click)="signup(f)" >sign up</button>
   </form>
 
 </section>
