Disliking shops functionality implemented:
- User can dislike a shop and it will disappear from the main page.
- Said shop is added to a disliked shops table
- A timer is set to delete it after 2 hours from the table
- Shop will appear again in main page among nearby shops after 2 hours
- Added an error message if login is unsuccessfull

--- a/shopsfrontend/src/app/shops/shops.component.html
+++ b/shopsfrontend/src/app/shops/shops.component.html
@@ -3,17 +3,17 @@
 <div class= "container">
 
 
-  <div class="row padding mt-2"  *ngFor="let dummy of ' '.repeat(Math.ceil(shops.length / 3)).split(''), let i = index">
+  <div class="row padding mt-2"  *ngFor="let dummy of ' '.repeat(Math.ceil(shops.length / 4)).split(''), let i = index">
 
-    <div class="col-md-4 d-flex align-items-stretch " *ngFor="let s of shops.slice(3*i, 3*(i+1)) ">
+    <div class="col-md-3 d-flex align-items-stretch " *ngFor="let s of shops.slice(4*i, 4*(i+1)) ">
 
       <div class="card">
         <h4> {{s.name}} </h4>
         <img class ="card-img-top" src={{s.picture}} height="300"/>
         <div class="card-body">
           <div style="text-align: center">
-            <a  class="btn btn-outline-danger m-1" style="width: 40%" > dislike</a>
-            <a  class="btn btn-outline-success m-1" style="width: 40%" (click)="addLikedShop(s)"> like</a>
+            <button  class="btn btn-outline-danger m-1" style="width: 40%" (click)="addDisikedShop(s)"> dislike</button>
+            <button  class="btn btn-outline-success m-1" style="width: 40%" (click)="addLikedShop(s)"> like</button>
           </div>
         </div>
       </div>
