--- a/shopsfrontend/src/app/login/login.component.html
+++ b/shopsfrontend/src/app/login/login.component.html
@@ -14,7 +14,7 @@
              ngModel name="password" required>
     </div>
     <input [disabled]="!f.valid " type="submit" class="btn btn-success ml-2 float-right" value="sign in"/>
-    <button class="btn btn-primary float-right" (click)="signup(f)" >sign up</button>
+    <button class="btn btn-primary float-right" type="button" (click)="signup(f)" >sign up</button>
   </form>
 
 </section>
